--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -2,3 +2,5 @@
 Logged in as Ethan Bard
 <br />
 <h3><%= @organization.name %></h3>
+<%= link_to 'Edit', edit_organization_path(@organization) %>
+<%= link_to 'Leave', organizations_path %>
