Created views for users and shifts

--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Adnat</h1>
-Logged in as Ethan Bard
+Logged in as Ethan Bard <%= link_to 'Log Out', users_path %>
 <br />
 <h3>Organizations</h3>
 <ul>
