--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -1,6 +1,7 @@
 <h1>Adnat</h1>
-Logged in as Ethan Bard
+Logged in as Ethan Bard <%= link_to 'Log Out', users_path %>
 <br />
 <h3><%= @organization.name %></h3>
+<%= link_to 'View Shifts', shifts_path %>
 <%= link_to 'Edit', edit_organization_path(@organization) %>
 <%= link_to 'Leave', organizations_path %>
