Users can now log in

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -8,7 +8,7 @@
 
     <p>
         <%= form.label :email %><br>
-        <%= form.text_field :email %>
+        <%= form.text_field :email_address %>
     </p>
 
     <p>
@@ -21,7 +21,7 @@
         <%= form.label :password_confirmation %><br>
         <%= form.text_field :password_confirmation %>
     </p>
-    
+
     <p>
         <%= form.submit :Sign_up%>
     </p>
