--- a/app/views/shifts/index.html.erb
+++ b/app/views/shifts/index.html.erb
@@ -1,3 +1,9 @@
+<style>
+    table, th, td {
+        border: 1px solid black;
+        border-collapse: collapse;
+    }
+</style>
 <h1>Adnat</h1>
 Logged in as Ethan Bard <%= link_to 'Log Out', users_path %>
 <br />
@@ -12,5 +18,41 @@ Logged in as Ethan Bard <%= link_to 'Log Out', users_path %>
         <th>Break length (minutes)</th>
         <th>Hours worked</th>
         <th>Shift cost</th>
+    </tr>
+    <tr>
+        <td>Jane Brown</td>
+        <td>7/02/2019</td>
+        <td>10:15am</td>
+        <td>1:30pm</td>
+        <td>0</td>
+        <td>3.25</td>
+        <td>$32.50</td>
+    </tr>
+    <tr>
+        <td>John Smith</td>
+        <td>5/02/2019</td>
+        <td>9:00am</td>
+        <td>1:00pm</td>
+        <td>30</td>
+        <td>3.5</td>
+        <td>$35.00</td>
+    </tr>
+    <tr>
+        <td>Ellen Jones</td>
+        <td>01/31/2019</td>
+        <td>11:00am</td>
+        <td>11:00pm</td>
+        <td>60</td>
+        <td>11.0</td>
+        <td>$110.00</td>
+    </tr>
+    <tr>
+        <td>Ethan Bard</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
     </tr>
 </table>
