--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,9 +1,14 @@
 <h1>Adnat</h1>
+<ul>
+    <% @users.each do |user| %>
+        <li><%= user.name %> <%= user.email_address %> <%= user.password%></li>
+    <% end %>
+</ul>
 <h3>Log in</h3>
-<%= form_with scope: :user, url: users_path, local: true do |form| %>
+<%= form_with scope: :user, url: users_login_path, local: true do |form| %>
     <p>
         <%= form.label :email %><br>
-        <%= form.text_field :email %>
+        <%= form.text_field :email_address %>
     </p>
 
     <p>
@@ -15,4 +20,5 @@
         <%= form.submit :Log_in %>
     </p>
 <% end %>
-<%= link_to 'Sign up', new_user_path %>
+<%= link_to 'Sign up', new_user_path %><br>
+<%= link_to 'Forgot your password?', user_path(2) %>
