--- a/app/views/organizations/edit.html.erb
+++ b/app/views/organizations/edit.html.erb
@@ -1,5 +1,5 @@
 <h1>Adnat</h1>
-Logged in as Ethan Bard <%= link_to 'Log Out', users_path %>
+Logged in as <%= current_user.name %> <%= link_to 'Log Out', users_path %>
 <br />
 <h3>Edit Organization</h3>
 <%= form_with(model: @organization, local: true) do |form| %>
