--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -1,5 +1,5 @@
 <h1>Adnat</h1>
-Logged in as Ethan Bard <%= link_to 'Log Out', users_path %>
+Logged in as <%= current_user.name %> <%= link_to 'Log Out', users_path %>
 <br />
 <h3><%= @organization.name %></h3>
 <%= link_to 'View Shifts', shifts_path %>
