--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -4,4 +4,4 @@ Logged in as <%= current_user.name %> <%= link_to 'Log Out', users_path %>
 <h3><%= @organization.name %></h3>
 <%= link_to 'View Shifts', shifts_path %>
 <%= link_to 'Edit', edit_organization_path(@organization) %>
-<%= link_to 'Leave', organizations_path %>
+<%= link_to 'Leave', shift_path(current_user.id), method: :delete %>
