--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -13,7 +13,7 @@
 
     <p>
         <%= form.label :password %><br>
-        <%= form.text_field :password %>
+        <%= form.password_field :password %>
     </p>
     
     <p>
@@ -21,4 +21,4 @@
     </p>
 <% end %>
 <%= link_to 'Sign up', new_user_path %><br>
-<%= link_to 'Forgot your password?', user_path(2) %>
+<%= link_to 'Forgot your password?', edit_user_path(1) %>
