--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -21,12 +21,12 @@
     <p>
         <%= form.label :password %><br>
         <em>(6 characters minimum)</em><br>
-        <%= form.text_field :password %>
+        <%= form.password_field :password %>
     </p>
 
     <p>
         <%= form.label :password_confirmation %><br>
-        <%= form.text_field :password_confirmation %>
+        <%= form.password_field :password_confirmation %>
     </p>
 
     <p>
