--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Adnat</h1>
-<h3>Sign Up</h3>
-<%= form_with scope: :user, url: users_path, local: true do |form| %>
+<h3>Edit Profile</h3>
+<%= form_with(model: @user, local: true) do |form| %>
     <% if @user.errors.any? %>
         <ul>
             <% @user.errors.full_messages.each do |message| %>
@@ -21,15 +21,10 @@
     <p>
         <%= form.label :password %><br>
         <em>(6 characters minimum)</em><br>
-        <%= form.password_field :password %>
+        <%= form.text_field :password %>
     </p>
 
     <p>
-        <%= form.label :password_confirmation %><br>
-        <%= form.password_field :password_confirmation %>
-    </p>
-
-    <p>
-        <%= form.submit "Sign up" %>
+        <%= form.submit "Save changes" %>
     </p>
 <% end %>
