--- a/app/views/users/password.html.erb
+++ b/app/views/users/password.html.erb
@@ -1,6 +1,6 @@
 <h1>Adnat</h1>
-<h3>Sign Up</h3>
-<%= form_with scope: :user, url: users_path, local: true do |form| %>
+<h3>Reset Password</h3>
+<%= form_with scope: :user, url: users_reset_password_path, local: true do |form| %>
     <% if @user.errors.any? %>
         <ul>
             <% @user.errors.full_messages.each do |message| %>
@@ -8,10 +8,6 @@
             <% end %>
         </ul>
     <% end %>
-    <p>
-        <%= form.label :name %><br>
-        <%= form.text_field :name %>
-    </p>
 
     <p>
         <%= form.label :email %><br>
@@ -30,6 +26,6 @@
     </p>
 
     <p>
-        <%= form.submit "Sign up" %>
+        <%= form.submit "Reset password" %>
     </p>
 <% end %>
