--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -3,4 +3,4 @@
 <h3><%= @organization.name %></h3>
 <%= link_to 'View Shifts', shifts_path %>
 <%= link_to 'Edit', edit_organization_path(@organization) %>
-<%= link_to 'Leave', shift_path(current_user.id), method: :delete %>
+<%= link_to 'Leave', shifts_destroy_all_path %>
